syntax = "proto3";

option java_multiple_files = true;
option java_package = "servicestubs";

package grpcservice;

import "google/protobuf/empty.proto";

// package do proto

// Service contract operations
service ManagementService {
    // ping server for testing service availability
    rpc isAlive(google.protobuf.Empty) returns (TextMessage);

    rpc changeNumberOfServerInstances(NumberOfInstances) returns (TextMessage);

    rpc changeNumberOfImageProcessingInstances(NumberOfInstances) returns (TextMessage);

}

message TextMessage {string txt =1;}

message NumberOfInstances {
    int32 numberOfInstances = 1;
}